Se pueden crear visualizaciones y arreglado un error fatal
Se ha modificado la visualización para que contenga id de película o id de serie, temporada y capítulo, añadiéndose el capítulo al historia (en vez de la serie). También se ha arreglado un error en el yml de contenidos que reventaba todos los paths :D
